<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".DetailsFragment">
    <data>
        <variable
                name="detailsViewModel"
                type="com.example.stocksviewer.viewmodels.DetailsViewModel"/>
        <variable
                name="quote"
                type="com.example.stocksviewer.model.entity.QuoteWithInfoAndData"/>
        <variable
                name="goBack"
                type="com.example.stocksviewer.utils.onclick.OnGoBackClick"/>
        <variable
                name="buy"
                type="com.example.stocksviewer.utils.onclick.BuyClick"/>
        <variable
                name="setInterval"
                type="com.example.stocksviewer.utils.onclick.OnSetIntervalClick"/>
        <import type="com.example.stocksviewer.utils.Interval"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                       android:layout_height="match_parent">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textSize="18sp"
                android:text="@{quote.quote.symbol}"
                android:id="@+id/textView4"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="42dp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:text="@{quote.name}"
                android:id="@+id/textView3"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.498" app:layout_constraintTop_toBottomOf="@+id/textView4"
                android:layout_marginTop="4dp"/>
        <ToggleButton
                android:id="@+id/favourite"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:checked="@{quote.quote.favourite}"
                android:onClick="@{() -> detailsViewModel.onFavouriteClick(quote)}"
                android:textOff=""
                android:textOn=""
                android:background="@drawable/favourite_details_selector"
                android:visibility="visible" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="40dp"/>
        <Button android:layout_width="48dp"
                android:layout_height="48dp" android:gravity="center_horizontal"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="40dp"
                app:layout_constraintStart_toStartOf="parent"
                android:onClick="@{() -> goBack.goBack()}"
                android:background="@drawable/back"
                android:layout_marginStart="16dp"
                android:id="@+id/button2">
        </Button>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="28sp"
                android:textColor="@color/black"
                android:text="@{quote.currentPrice}"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/textView9" app:layout_constraintTop_toBottomOf="@+id/textView3"
                android:layout_marginTop="10dp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textColor="@{quote.price.dif > 0 ? @color/green : @color/dark_red}"
                android:textSize="12sp"
                android:text="@{quote.difText}"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="5dp" app:layout_constraintTop_toBottomOf="@+id/textView9"
                android:id="@+id/textView2" app:layout_constraintBottom_toTopOf="@+id/chart"
                app:layout_constraintHorizontal_bias="0.501" app:layout_constraintVertical_bias="0.024"/>

        <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/chart"
                android:layout_width="match_parent" android:layout_height="280dp"
                app:layout_constraintTop_toBottomOf="@+id/textView9" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toTopOf="@+id/radioGroup"
                android:layout_marginBottom="20dp" app:layout_constraintHorizontal_bias="0.0">
        </com.github.mikephil.charting.charts.LineChart>

        <RadioGroup
                android:checkedButton="@id/D"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:gravity="center"
                app:layout_constraintBottom_toTopOf="@+id/button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                android:layout_marginBottom="52dp" android:id="@+id/radioGroup">
            <RadioButton android:id="@+id/D"
                         android:text="@string/d"
                         android:onClick="@{() -> setInterval.setInterval(Interval.D)}"
                         android:layout_marginStart="5dp"
                         android:layout_marginEnd="5dp"
                         android:layout_height="match_parent"
                         android:layout_width="wrap_content"/>
            <RadioButton android:id="@+id/H"
                         android:text="@string/_1h"
                         android:onClick="@{() -> setInterval.setInterval(Interval.H)}"
                         android:layout_marginStart="5dp"
                         android:layout_marginEnd="5dp"
                         android:layout_height="match_parent"
                         android:layout_width="wrap_content"/>
            <RadioButton android:id="@+id/W"
                         android:text="@string/w"
                         android:onClick="@{() -> setInterval.setInterval(Interval.W)}"
                         android:layout_marginStart="5dp"
                         android:layout_marginEnd="5dp"
                         android:layout_height="match_parent"
                         android:layout_width="wrap_content"/>
            <RadioButton android:id="@+id/M"
                         android:text="@string/m"
                         android:onClick="@{() -> setInterval.setInterval(Interval.M)}"
                         android:layout_marginStart="5dp"
                         android:layout_marginEnd="5dp"
                         android:layout_height="match_parent"
                         android:layout_width="wrap_content"/>
            <RadioButton android:id="@+id/ThreeM"
                         android:text="@string/_3m"
                         android:onClick="@{() -> setInterval.setInterval(Interval.threeM)}"
                         android:layout_marginStart="5dp"
                         android:layout_marginEnd="5dp"
                         android:layout_height="match_parent"
                         android:layout_width="wrap_content"/>
        </RadioGroup>

        <androidx.appcompat.widget.AppCompatButton
                android:text="@string/buy"
                android:onClick="@{() -> buy.buyClick()}"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:id="@+id/button"
                android:textColor="@color/white"
                android:background="@drawable/buy"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="1.0"
                android:layout_marginBottom="20dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="16dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>